--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,4 +2,4 @@
 
 
 <PageTitle>🍉 Suika</PageTitle>
-<img src="img/suika_chan.png" width="450px" style="position: absolute; bottom: 0; right: 0;" />
+<img src="img/suika_chan.png" width="450px" style="position: absolute; bottom: 0; right: 0; margin-right: 100px" />
